# blueheart

./: .gitignore  CMakeLists.txt  README.md
doc/: hosts  qq邮箱授权码.txt  服务器地址.txt  系统架构.vsdx  腾讯ssh密钥.txt  车辆加油台账（模板）.xlsx  车辆管理登记表.xls
doc/config/: network.json  server_need_change_name_to_network.json
doc/linux环境编译搭建/: centos7.6编译qt环境搭建.txt  get.sh  golang 编译环境搭建.txt  init.sh  linuxdeployqt配置方法.txt
doc/windwos环境编译搭建/: get.bat
doc/功能架构/: 系统功能架构.vsdx  系统模块架构.vsdx
doc/数据库/: 创建数据库.txt  用户信息表.txt
doc/流程图/: 企业注册.vsdx  注册.vsdx  用户注册.vsdx  用户登录.vsdx  登录.vsdx
doc/生产环境搭建/: centos7.6 数据库搭建.txt  循环启动mysql脚本.txt
doc/界面设计/: 注册.vsdx  登录.vsdx
doc/系统用例/: 系统用例.vsdx
src/projects/: CMakeLists.txt
src/projects/client_win/: CMakeLists.txt
src/projects/client_win/app/: CMakeLists.txt  usecartime.h
src/projects/client_win/app/httpclient/: checknumberclient.cpp  checknumberclient.h  httpclient.cpp  httpclient.h  loginclient.cpp  loginclient.h  siginclient.cpp  siginclient.h
src/projects/client_win/app/message/: all  checknumber.cpp  checknumber.h  checknumberrequest.cpp  checknumberrequest.h  checknumberresponse.cpp  checknumberresponse.h  loginrequest.cpp  loginrequest.h  loginresponse.cpp  loginresponse.h  message.cpp  message.h  response.cpp  response.h  serializable.cpp  serializable.h  signinrequest.cpp  signinrequest.h  signinresponse.cpp  signinresponse.h  useremailrequest.cpp  useremailrequest.h
src/projects/client_win/app/transmitcenter/: transmitcenter.cpp
src/projects/client_win/gui/: CMakeLists.txt  blueheart.cpp  blueheart.h  login.cpp  login.h  main.cpp  signin.cpp  signin.h
src/projects/core/: CMakeLists.txt
src/projects/core/include/configfile/: config_file.h
src/projects/core/include/executableprogram/: emailsenderprogram.h  executableprogram.h  mysqlprogram.h  ziperprogram.h
src/projects/core/include/http/: httpclient.h  httpclientbase.h  httpserverbase.h  httpserverhandel.h
src/projects/core/include/transmitcenter/: serializable.h  transmitcenter.h
src/projects/core/include/util/: emailsenderconfig.h  file_util.h  mysqlserverconfig.h  platform_util.h  random_util.hpp
src/projects/core/include/widget/: widgetinit.h
src/projects/core/src/configfile/: config_file.cpp
src/projects/core/src/configfile/parser_builder/builder/: config_file_content_builder.h  config_file_content_builder_handle.h  ini_builder_handle.cpp  json_builder_handle.cpp  xml_builder_handle.cpp
src/projects/core/src/configfile/parser_builder/parser/: config_file_content_parser.cpp  config_file_content_parser.h  config_file_content_parser_handle.h  ini_parser_handle.cpp
src/projects/core/src/executableprogram/: emailsenderprogram.cpp  executableprogram.cpp  msyqlprogram.cpp  mysqlprogram.cpp  ziperprogram.cpp
src/projects/core/src/executableprogram/mysql/: queryusernameisexist.cpp
src/projects/core/src/http/: httpclient.cpp  httpclientbase.cpp  httpserverbase.cpp
src/projects/core/src/transmitcenter/: serializable.cpp  transmitcenter.cpp
src/projects/core/src/util/: emailsenderconfig.cpp  file_util.cpp  mysqlserverconfig.cpp  platform_util.cpp  random_number.cpp  string_util.cpp
src/projects/serializabletool/: CMakeLists.txt  main.cpp  serializabletool.cpp  serializabletool.h
src/projects/server/: CMakeLists.txt
src/projects/server/checknumberserver/: CMakeLists.txt  getchecknumber.cpp  getchecknumber.h  httpserver.cpp  httpserver.h  loginchecknumber.cpp  loginchecknumber.h  main.cpp  siginchecknumber.cpp  siginchecknumber.h  signin.cpp
src/projects/server/checknumberserver/emailsender/: main.go
src/projects/server/checknumberserver/mysqlclient/: main.go  response.go
src/projects/server/executableprogram/mysqlclient/: firm.go  main.go  response.go  users
src/projects/server/executableprogram/ziper/: main.go  ziper.go
src/projects/server/signinserver/: CMakeLists.txt  httpserver.cpp  main.cpp  signin.cpp  signin.h
src/projects/test/: CMakeLists.txt  main.cpp
src/resource/blueheart/: blueheart.qss  resource.qrc
src/ui/blueheart/: blueheart.ui  login.ui  signin.ui
src/ui/serializabletool/: serializabletool.ui
